--- a/src/itamar/dirsynch/MainJFrame.form
+++ b/src/itamar/dirsynch/MainJFrame.form
@@ -56,16 +56,19 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenuTools">
           <Properties>
+            <Property name="mnemonic" type="int" value="116"/>
             <Property name="text" type="java.lang.String" value="Tools"/>
           </Properties>
           <SubComponents>
             <Menu class="javax.swing.JMenu" name="jMenuSelect">
               <Properties>
+                <Property name="mnemonic" type="int" value="115"/>
                 <Property name="text" type="java.lang.String" value="Select"/>
               </Properties>
               <SubComponents>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemAll">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="97"/>
                     <Property name="text" type="java.lang.String" value="All"/>
                   </Properties>
                   <Events>
@@ -74,6 +77,7 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemNone">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="110"/>
                     <Property name="text" type="java.lang.String" value="None"/>
                   </Properties>
                   <Events>
@@ -84,6 +88,7 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemYesNo">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="121"/>
                     <Property name="text" type="java.lang.String" value="Only YES/no"/>
                   </Properties>
                   <Events>
@@ -92,6 +97,7 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemOnlyInMain">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="109"/>
                     <Property name="text" type="java.lang.String" value="Only in main dir"/>
                   </Properties>
                   <Events>
@@ -100,6 +106,7 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemOnlyInSec">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="115"/>
                     <Property name="text" type="java.lang.String" value="Only in sec dir"/>
                   </Properties>
                   <Events>
@@ -110,6 +117,7 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemNewerInMain">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="110"/>
                     <Property name="text" type="java.lang.String" value="Newer in main"/>
                   </Properties>
                   <Events>
@@ -118,6 +126,7 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemNewerInSec">
                   <Properties>
+                    <Property name="mnemonic" type="int" value="101"/>
                     <Property name="text" type="java.lang.String" value="Newer in sec"/>
                   </Properties>
                   <Events>
@@ -130,11 +139,13 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenuOptions">
           <Properties>
+            <Property name="mnemonic" type="int" value="111"/>
             <Property name="text" type="java.lang.String" value="Options"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JCheckBoxMenuItem" name="jChkBxMenuItemIncSubdirs">
               <Properties>
+                <Property name="mnemonic" type="int" value="115"/>
                 <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Include subdirs"/>
               </Properties>
@@ -144,6 +155,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JCheckBoxMenuItem" name="jChkBxMenuItemUseHash">
               <Properties>
+                <Property name="mnemonic" type="int" value="104"/>
                 <Property name="text" type="java.lang.String" value="Use hash"/>
               </Properties>
               <Events>
@@ -152,6 +164,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JCheckBoxMenuItem" name="jChkBxMenuItemHideEquals">
               <Properties>
+                <Property name="mnemonic" type="int" value="101"/>
                 <Property name="text" type="java.lang.String" value="Hide equals"/>
               </Properties>
               <Events>
@@ -160,18 +173,29 @@
             </MenuItem>
             <MenuItem class="javax.swing.JCheckBoxMenuItem" name="jChkBxMenuItemKeepBackup">
               <Properties>
+                <Property name="mnemonic" type="int" value="98"/>
+                <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Keep backup"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JCheckBoxMenuItem" name="jChkBxMenuItemSynchTimesHash">
+              <Properties>
+                <Property name="mnemonic" type="int" value="116"/>
+                <Property name="selected" type="boolean" value="true"/>
+                <Property name="text" type="java.lang.String" value="Synch times for same hashes"/>
               </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenuHelp">
           <Properties>
+            <Property name="mnemonic" type="int" value="104"/>
             <Property name="text" type="java.lang.String" value="Help"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemDirSynchHelp">
               <Properties>
+                <Property name="mnemonic" type="int" value="104"/>
                 <Property name="text" type="java.lang.String" value="DirSynch Help"/>
               </Properties>
               <Events>
@@ -180,6 +204,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemAbout">
               <Properties>
+                <Property name="mnemonic" type="int" value="97"/>
                 <Property name="text" type="java.lang.String" value="About..."/>
               </Properties>
               <Events>
